End of series download section

--- a/Index.html
+++ b/Index.html
@@ -179,9 +179,46 @@
         <!-- Download Now -->
 
         <section class="download">
+
           <h2 class="section-header">
-            
+            Download Now
           </h2>
+
+          <div class="download card">
+            <div class="download img">
+              <img src="assets/image/house-of-the-dragon.jpg" alt="house-of-the-dragon">
+            </div>
+
+            <div class="download-content">
+              <a href="#">
+                <span>Download</span>
+                <i class="fas fa-cloud-download-alt"></i>
+              </a>
+
+              <div class="download-info">
+                <div class="download-genre">
+                  <h4>Genre : </h4>
+                  <p>Action, Adventure, Drama, Fantasy, Romance</p>
+                </div>
+
+                <div class="download-cast">
+                  <h4>Cast : </h4>
+                  <img src="assets/image/hotd1.jpg" alt="cast">
+                  <img src="assets/image/hotd2.jpg" alt="cast">
+                  <img src="assets/image/hotd3.jpg" alt="cast">
+                  <img src="assets/image/hotd4.jpg" alt="cast">
+                  <img src="assets/image/hotd5.jpg" alt="cast">
+                </div>
+
+              </div>
+
+              <div class="download-rating">
+                <span class="rate">8.5</span>
+                <span>( 269K ratings )</span>
+                <span>( 1 season )</span>
+              </div>
+            </div>
+          </div>
         </section>
 
         <!-- End Of Download Now -->
