gallery is done

--- a/Index.html
+++ b/Index.html
@@ -223,6 +223,82 @@
 
         <!-- End Of Download Now -->
 
+        <!-- Gallery Section -->
+        <section class="gallery">
+          <h2 class="section-header">Movies Gallery</h2>
+          <div class="gallery-images">
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/1899.jpg" alt="gallery">
+              </a>
+            </div>
+            
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/bb1.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/dp12.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/im1.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/notimetodie.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/pb1.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/pb2.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/tnb1.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/tt1.jpg" alt="gallery">
+              </a>
+            </div>
+
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/bh1.jpg" alt="gallery">
+              </a>
+            </div>
+            <div class="gallery-img">
+              <a href="#">
+                <img src="assets/image/br.jpg" alt="gallery">
+              </a>
+            </div>
+
+          </div>
+        </section>
+
+        <!-- End Of Gallery Section -->
+
 
       </main>
       <div class="sidebar-right">
