set lightbox javascript files

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/62df5394ba.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="assets/styles/lightbox.css">
   <link rel="stylesheet" href="assets/styles/styles.css" media="all">
   <title>Movies Webssite</title>
 </head>
@@ -229,67 +230,67 @@
           <div class="gallery-images">
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/1899.jpg" data-lightbox="gallery">
                 <img src="assets/image/1899.jpg" alt="gallery">
               </a>
             </div>
 
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/bb1.jpg" data-lightbox="gallery">
                 <img src="assets/image/bb1.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/dp12.jpg" data-lightbox="gallery">
                 <img src="assets/image/dp12.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/im1.jpg" data-lightbox="gallery">
                 <img src="assets/image/im1.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/notimetodie.jpg" data-lightbox="gallery">
                 <img src="assets/image/notimetodie.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/pb1.jpg" data-lightbox="gallery">
                 <img src="assets/image/pb1.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/pb2.jpg" data-lightbox="gallery">
                 <img src="assets/image/pb2.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/tnb1.jpg" data-lightbox="gallery">
                 <img src="assets/image/tnb1.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/tt1.jpg" data-lightbox="gallery">
                 <img src="assets/image/tt1.jpg" alt="gallery">
               </a>
             </div>
 
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/bh1.jpg" data-lightbox="gallery">
                 <img src="assets/image/bh1.jpg" alt="gallery">
               </a>
             </div>
             <div class="gallery-img">
-              <a href="#">
+              <a href="assets/image/br.jpg" data-lightbox="gallery">
                 <img src="assets/image/br.jpg" alt="gallery">
               </a>
             </div>
@@ -320,6 +321,8 @@
     </footer>
 
   </div>
+
+  <script src="assets/scripts/lightbox.js"></script>
 
 </body>
 
