--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/62df5394ba.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/styles/lightbox.css">
   <link rel="stylesheet" href="assets/styles/styles.css" media="all">
-  <title>Movies Webssite</title>
+  <title>Solo Movie Center</title>
 </head>
 
 <body>
@@ -18,10 +18,16 @@
   <div class="outer-wrap">
     <header class="site-header">
       <div class="site-info">
-        <h1 class="site-title">header</h1>
+        <h1 class="site-title">Solo Movie Center</h1>
         <p class="site-description">Set Back | Relax | Watch</p>
       </div>
-      <nav class="main-menue">the menue is here</nav>
+      <nav class="main-menu">
+        <ul>
+          <li><a href="#Watch">Watch</a></li>
+          <li><a href="#Download">Download</a></li>
+          <li><a href="#Gallery">Gallery</a></li>
+        </ul>
+      </nav>
     </header>
     <!-- end of header -->
 
@@ -128,7 +134,7 @@
         <!-- end of posts -->
 
         <!-- watch today -->
-        <section class="watch">
+        <section class="watch" id="watch">
           <h2 class="section-header">Watch Today</h2>
           <div class="watch-card">
             <div class="watch-img">
@@ -179,7 +185,7 @@
 
         <!-- Download Now -->
 
-        <section class="download">
+        <section class="download" id="download">
 
           <h2 class="section-header">
             Download Now
@@ -225,7 +231,7 @@
         <!-- End Of Download Now -->
 
         <!-- Gallery Section -->
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h2 class="section-header">Movies Gallery</h2>
           <div class="gallery-images">
 
@@ -303,21 +309,153 @@
 
       </main>
       <div class="sidebar-right">
-        <h1>side bar goes hear</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam unde expedita accusantium perspiciatis, ab
-          cum aliquam, quod quisquam temporibus, eum labore? Dolorem, placeat nihil? Voluptatum obcaecati qui beatae sit
-          similique commodi amet aut accusantium doloremque vel id sint libero facilis animi veniam, illo, at corrupti
-          laboriosam consequuntur pariatur debitis consectetur sapiente impedit aspernatur! Consectetur, accusamus sed
-          odit dolorum eligendi nesciunt, quidem inventore possimus tempore aliquid ducimus, vel qui quod iste veniam.
-          Nesciunt rerum eveniet quas accusamus, eius aperiam aliquam repudiandae beatae harum in sit laborum? Harum
-          iure quisquam ex? Odit hic excepturi voluptatibus tempore, vitae sed harum quaerat corrupti maiores!
-        </p>
+
+        <div class="widget">
+          <div class="widget-content">
+            <h3>Top Rated Movies</h3>
+            <nav class="sidebar-menu">
+              <ul>
+                <li>
+                  <a href="#">The Godfather</a>
+                </li>
+                <li>
+                  <a href="#">12 Angry Man</a>
+                </li>
+                <li>
+                  <a href="#">The Dark Knight</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="widget-content">
+            <h3>Great Actors</h3>
+            <nav class="sidebar-menu">
+              <ul>
+                <li>
+                  <a href="#">Alpachino</a>
+                </li>
+                <li>
+                  <a href="#">Robert De niro</a>
+                </li>
+                <li>
+                  <a href="#">Johnny Depp</a>
+                </li>
+                <li>
+                  <a href="#">Leonardo Dicaprio</a>
+                </li>
+                <li>
+                  <a href="#">Brad pitt</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="widget-content">
+            <h3>UpComing Movies</h3>
+            <nav class="sidebar-menu">
+              <ul>
+                <li>
+                  <a href="#"></a>
+                </li>
+                <li>
+                  <a href="#">Avatar : The Way Of Water</a>
+                </li>
+                <li>
+                  <a href="#">John Wick 4</a>
+                </li>
+                <li>
+                  <a href="#">Spider-Man : Across The Spider-Verse</a>
+                </li>
+                <li>
+                  <a href="#">Ant-Man and Wasp : Quantumania </a>
+                </li>
+                <li>
+                  <a href="#">The Marvels</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="widget-content">
+            <h3>Best Directors</h3>
+            <nav class="sidebar-menu">
+              <ul>
+                <li>
+                  <a href="#">Stanley Kubrick</a>
+                </li>
+                <li>
+                  <a href="#">Alfred Hitchcock</a>
+                </li>
+                <li>
+                  <a href="#">Martin Scorsese</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="widget-content">
+            <h3>Categories</h3>
+            <nav class="sidebar-menu">
+              <ul>
+                <li>
+                  <a href="#">Action</a>
+                </li>
+                <li>
+                  <a href="#">Drama</a>
+                </li>
+                <li>
+                  <a href="#">Adventure</a>
+                </li>
+                <li>
+                  <a href="#">Horror</a>
+                </li>
+                <li>
+                  <a href="#">Romance</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="widget">
+          <div class="widget-content">
+            <h3>Top 10 This Week</h3>
+            <nav class="sidebar-menu">
+              <ul>
+                <li>
+                  <a href="#">Black Panther: Wakanda Forever</a>
+                </li>
+                <li>
+                  <a href="#">Wednesday</a>
+                </li>
+                <li>
+                  <a href="#">1899</a>
+                </li>
+                <li>
+                  <a href="#">Top Gun: Maverick</a>
+                </li>
+                <li>
+                  <a href="#">Bullet Train</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
       </div>
     </div>
 
     <footer class="site-footer">
-      <h1>footer</h1>
+      <h2>All Right Reserved | Mahsa Fateh 👩🏽‍💻</h2>
     </footer>
 
   </div>
